--- a/views/users/profile.handlebars
+++ b/views/users/profile.handlebars
@@ -14,7 +14,7 @@
         <a class="active" href="/customers/private">Profile</a>
         <a href="/reservations">Book a Table</a>
         <a href="/customers/reservations">Reservations Made</a>
-        <a href="/reservations">Write Review</a>
+        <a href="/reviews">Write Review</a>
     </nav>
 </section>
 
