--- a/views/users/signup.handlebars
+++ b/views/users/signup.handlebars
@@ -16,7 +16,7 @@
         <nav class="topnav">
             <a href="/">Home</a>
             <a class="active" href="/customers/login">Customers</a>
-            <a href="/restaurants/login">Restaurant</a>
+            <a href="/restaurants/login">Restaurants</a>
             <a href="/reviews">Reviews</a>
         </nav>
     </section>
@@ -40,7 +40,7 @@
             </div>
             <div class="form-group">
                 <label for=" phone">Enter the PhoneNumber</label>
-                <input type="number" class="form-control" id="phone" name="phone" placeholder="PhoneNumber" required />
+                <input type="number" class="form-control" id="phone" name="phone" placeholder="Phone Number" required />
             </div>
             <div class="form-group">
                 <label for="city">Enter the City</label>
